Fix touch screen controls on mobile

--- a/public/index.css
+++ b/public/index.css
@@ -54,9 +54,9 @@ select {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    overflow: auto;
+    overflow-y: auto;
 
-    visibility: hidden;
+    display: none;
 }
 
 #extraMenu {
@@ -67,7 +67,6 @@ select {
     opacity: 0.3;
     text-decoration: none;
     color: black;
-    visibility: visible;
 }
 
 #extraMenu:hover {
